--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TITLE</title>
+    <title>radiQL</title>
     <meta name="description" content="DESCRIPTION">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="style.scss"> -->
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script src="index.js" async defer></script> -->
-    here
   </body>
 </html>
